spinOps/c_code/spin.h


double clebsch_(const double j1,const double m1,const double j2,const double m2,const double j,const double m);
double tlm_(double l,double m,double j1,double m1,double j2,double m2);
double unit_tlm_(const double l,const double m,const double j1,const double m1,const double j2,const double m2);
int number_of_states_(int spin_count, int *i_times_2);
void getIx_(double complex *operator, int spin_index, int *i_times_2, int spin_count);
void getIy_(double complex *operator, int spin_index, int *i_times_2, int spin_count);
void getIz_(double complex *operator, int spin_index, int *i_times_2, int spin_count);
void getIp_(double complex *operator, int spin_index, int *i_times_2, int spin_count);
void getIm_(double complex *operator, int spin_index, int *i_times_2, int spin_count);
void getTlm_(double complex *operator, int spin_index, int *i_times_2, int spin_count, int L, int M);
void getTlm_unit_(double complex *operator, int spin_index, int *i_times_2, int spin_count, int L, int M);
void getEf_(double complex *operator, int r, int s, int *i_times_2, int spin_count);
void getIxf_(double complex *operator, int r, int s, int *i_times_2, int spin_count);
void getIyf_(double complex *operator, int r, int s, int *i_times_2, int spin_count);
void getIzf_(double complex *operator, int r, int s, int *i_times_2, int spin_count);
void getIpf_(double complex *operator, int r, int s, int *i_times_2, int spin_count);
void getImf_(double complex *operator, int r, int s, int *i_times_2, int spin_count);
double mypow(const double x, int n);
double fac(const double x);