spinOps/c_code/spatial.h


double wigner_d_(const int two_J, const int two_m1, const int two_m2, const double theta);
double complex DLM_(const int two_l, const int two_m1, const int two_m2, const double alpha, const double beta, const double gamma);
void Rot_(const int two_j, const double complex *initial,const double alpha, const double beta, const double gamma,double complex *final);
void getrho2_pas_(double complex *tensor, const double zeta, const double eta);
void getrho1_pas_(double complex *tensor, const double zeta);