spinOps/spinOps.pxd

# autogenerated by scripts/gen_pxd.py
cimport numpy as cnp
cdef extern from "spatial.h":
    void getrho2_pas_(double complex *tensor, double zeta, double eta)
    void getrho1_pas_(double complex *tensor, double zeta)
    double wigner_d_(double l,double m1,double m2,double beta)
    double complex DLM_(double l,double  m1,double m2, double alpha, double beta, double gamma)
    void Rot_(double j, double complex *initial, double alpha, double beta, double gamma, double complex *final)

cdef extern from "spin.h":
    double clebsch_(double j1,double m1,double j2,double m2,double j,double m)
    double tlm_(double l,double m,double j1,double m1,double j2,double m2)
    double unit_tlm_(double l,double m,double j1,double m1,double j2,double m2)
    int number_of_states_(int spin_count, int *i_times_2)
    void getIx_(double complex *operator, int spin_index, int *i_times_2, int spin_count)
    void getIy_(double complex *operator, int spin_index, int *i_times_2, int spin_count)
    void getIz_(double complex *operator, int spin_index, int *i_times_2, int spin_count)
    void getIp_(double complex *operator, int spin_index, int *i_times_2, int spin_count)
    void getIm_(double complex *operator, int spin_index, int *i_times_2, int spin_count)
    void getTlm_(double complex *operator, int spin_index, int *i_times_2, int spin_count, int L, int M)
    void getTlm_unit_(double complex *operator, int spin_index, int *i_times_2, int spin_count, int L, int M)
    void getEf_(double complex *operator, int r, int s, int *i_times_2, int spin_count)
    void getIxf_(double complex *operator, int r, int s, int *i_times_2, int spin_count)
    void getIyf_(double complex *operator, int r, int s, int *i_times_2, int spin_count)
    void getIzf_(double complex *operator, int r, int s, int *i_times_2, int spin_count)
    void getIpf_(double complex *operator, int r, int s, int *i_times_2, int spin_count)
    void getImf_(double complex *operator, int r, int s, int *i_times_2, int spin_count)
    double mypow(double x, int n)
    double fac(double x)

